--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -19,7 +19,7 @@
           </span>
         </a>
 
-        <a class="button is-light is-medium has-text-weight-bold" href="running-a-nats-service/introduction/installation" target="_blank">
+        <a class="button is-light is-medium has-text-weight-bold" href="https://docs.nats.io/running-a-nats-service/introduction/installation" target="_blank">
         <span class="icon">
             <i class="fas fa-server"></i>
           </span>
