fix events - netlify didn't publish

--- a/layouts/shortcodes/event-list.html
+++ b/layouts/shortcodes/event-list.html
@@ -8,6 +8,7 @@
 <strong>Who</strong>: {{ .who }}<br />
 <strong>What</strong>: {{ .what }}<br />
 <strong>Where</strong>: {{ .where }}<br />
+<strong>Link</strong>: {{ .link }}<br />
 
 <a href="{{ .ref }}" target="_blank">
   More Information
