add harperdb logo, adjust img sizes

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -171,7 +171,7 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
   +logo(40%, 90%, 90%)
 
 .logo
-  margin: auto auto auto
+  margin: 0
 
   +tablet-only
     width: 90%
@@ -236,8 +236,8 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
    justify-content: right
 
 .is-user-logo
-     height: 60%
-     width: 60%
+     height: 50%
+     width: 50%
 
 .is-partner-logo
      height: 75%
