update intro video on home to rethink connectivity

--- a/layouts/partials/home/video.html
+++ b/layouts/partials/home/video.html
@@ -6,14 +6,14 @@
           An Introduction to NATS
         </p>
         <p class="title is-size-3 is-size-3-mobile has-text-weight-light">
-        KubeCon + CloudNativeCon NA 2019 Keynote
+        The first screencast in a weekly series all about NATS.io <a href="https://rethink.synadia.com" target="_blank">Rethink Connectivity</a>
         </p>
       </div>
 
       <div class="column is-6">
         <iframe
           class="is-video"
-          src="https://www.youtube.com/embed/lHQXEqyH57U"
+          src="https://www.youtube.com/embed/hjXIUPZ7ArM"
           allowfullscreen=""
           style="position: relative; height: 315px; width: 560px;"
           frameborder="0"
