remove google analytics, add fathom

--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -7,3 +7,6 @@
 <!-- Twitter Card -->
 {{ template "_internal/twitter_cards.html" . }}
 
+<!-- Fathom Analytics -->
+<script src="https://cdn.usefathom.com/script.js" data-site="AMSRZELB" defer></script>
+
