fix burger menu

--- a/layouts/partials/javascript.html
+++ b/layouts/partials/javascript.html
@@ -1,3 +1,8 @@
+{{ $app   := resources.Get "js/app.js" | resources.ExecuteAsTemplate "js/app.js" . | fingerprint }}
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="{{ $app.RelPermalink }}" integrity="{{ $app.Data.Integrity }}"></script>
+
+
 {{ if .Params.chart }}
 {{ $chart := resources.Get "js/Chart.js" | fingerprint }}
 <script src="{{ $chart.RelPermalink }}" integrity="{{ $chart.Data.Integrity }}"></script>
