add anchor link to who uses nats

--- a/layouts/partials/home/users.html
+++ b/layouts/partials/home/users.html
@@ -4,9 +4,9 @@
 <section class="section">
   <div class="columns is-centered">
     <div class="column has-text-centered is-one-fifth">
-      <p class="title is-spaced is-size-2 is-size-3-mobile has-text-dark has-text-weight-light" id="who-use">
-        Who uses NATS
-      </p>
+      
+        <h1 class="title is-spaced is-size-2 is-size-3-mobile has-text-dark has-text-weight-light">Who uses NATS</h1>
+      
       <a class="button is-small is-primary has-text-weight-bold" href="https://github.com/nats-io/nats-site#adding-a-company-logo" target="_blank">
         Add your logo
       </a>
