update fathom to exclude test,stage
Signed-off-by: ainsley <ginger@synadia.com>

--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -8,5 +8,5 @@
 {{ template "_internal/twitter_cards.html" . }}
 
 <!-- Fathom Analytics -->
-<script src="https://cdn.usefathom.com/script.js" data-site="AMSRZELB" defer></script>
+<script src="https://cdn.usefathom.com/script.js" data-site="AMSRZELB" data-excluded-domains="nats-io.netlify.app,localhost" defer></script>
 
