--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -7,6 +7,12 @@
 <!-- Twitter Card -->
 {{ template "_internal/twitter_cards.html" . }}
 
-<!-- Fathom Analytics -->
-<script src="https://cdn.usefathom.com/script.js" data-site="AMSRZELB" data-excluded-domains="nats-io.netlify.app,localhost" defer></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6242VH03CH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-6242VH03CH');
+</script>
