--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -323,5 +323,5 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
   float: left
   padding : 0 10px 0 0
 
-
-
+.content .highlight
+  margin-bottom: 1rem
