--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -1,12 +1,22 @@
 {{ $features := site.Params.features }}
 <section class="section is-light">
   <div class="container">
-    <div class="columns is-multiline is-variable is-8">
+    <div class="columns is-multiline is-variable is-8 mb-6">
       {{ range $features }}
-      <div class="column is-half">
+      <div class="column is-one-third">
         {{ partial "home/feature.html" . }}
       </div>
       {{ end }}
     </div>
+    <div class="columns is-centered has-extra-top-margin">
+      <a class="button is-normal is-primary has-text-weight-bold" href="/support">
+      <span class="icon">
+          <i class="far fa-comments"></i>
+        </span>
+      <span>
+          Talk with an Expert
+        </span>
+      </a>
+      </div>
   </div>
 </section>
