--- a/layouts/partials/home/users.html
+++ b/layouts/partials/home/users.html
@@ -7,9 +7,6 @@
       
         <h1 class="title is-spaced is-size-2 is-size-3-mobile has-text-dark has-text-weight-light">Who uses NATS</h1>
       
-      <a class="button is-small is-primary has-text-weight-bold" href="https://github.com/nats-io/nats-site#adding-a-company-logo" target="_blank">
-        Add your logo
-      </a>
     </div>
   </div>
   <div class="container">
@@ -23,6 +20,14 @@
             </a>
           </div>
           {{ end }}
+    </div>
+    <div class="columns is-centered">
+      <div class="column has-text-centered is-one-fifth">
+          
+        <a class="button is-normal is-primary has-text-weight-bold" href="https://github.com/nats-io/nats-site#adding-a-company-logo" target="_blank">
+          Add your logo
+        </a>
+      </div>
     </div>
   </div>
   </div>
