--- a/layouts/partials/home/feature.html
+++ b/layouts/partials/home/feature.html
@@ -8,7 +8,7 @@
     <div class="content">
       <h2>{{ .title }}</h2>
 
-      {{ .description | markdownify }}
+      <p class="is-size-5">{{ .description | markdownify }}</p>
     </div>
   </div>
 </article>
