--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -1,7 +1,7 @@
 {{ $features := site.Params.features }}
 <section class="section is-light">
   <div class="container">
-    <div class="columns is-multiline is-variable is-8 mb-6">
+    <div class="columns is-multiline is-variable is-8">
       {{ range $features }}
       <div class="column is-one-third">
         {{ partial "home/feature.html" . }}
