add logos to support page
Signed-off-by: ainsley <ginger@synadia.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -128,6 +128,9 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
 .has-extra-top-margin
   margin-top: 2rem
 
+.has-extra-bottom-margin
+  margin-bottom: 2rem  
+
 .social-button
   & + &
     margin-left: 1.75rem
@@ -242,6 +245,10 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
 .is-partner-logo
      height: 75%
      width: 75%
+
+.is-support-logo
+     height: 25%
+     width: 25%     
 
 .is-video
   @include mobile
