centered featured text, removed support logos
Signed-off-by: ainsley <ginger@synadia.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -131,6 +131,9 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
 .has-extra-bottom-margin
   margin-bottom: 2rem  
 
+.text-centered
+  text-align: center  
+
 .social-button
   & + &
     margin-left: 1.75rem
@@ -142,7 +145,7 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
     color: $grey
 
 .has-margin-right
-  margin-right: 2rem
+  margin-right: 1rem
 
 .is-constrained
   max-width: 90ch
