--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -3,7 +3,7 @@
   <div class="container has-extra-top-margin has-extra-bottom-margin">
     <div class="columns is-multiline is-variable is-6">
       {{ range $features }}
-      <div class="column is-one-third">
+      <div class="column is-centered is-one-third">
         {{ partial "home/feature.html" . }}
       </div>
       {{ end }}
