update feature text - remove icons
Signed-off-by: ainsley <ginger@synadia.com>

--- a/layouts/partials/home/feature.html
+++ b/layouts/partials/home/feature.html
@@ -4,7 +4,7 @@
     
     <div class="content text-centered">
       
-      <h2><i class="icon has-margin-right has-text-nats-blue fas fa-sm fa-{{ .icon }}"></i>{{ .title }}</h2>
+      <h2 class="has-text-weight-bold">{{ .title }}</h2>
 
       <p class="is-size-6">{{ .description | markdownify }}</p>
     </div>
