Chore: Bump Bulma version to latest and remove deprecated files
Signed-off-by: thisisobate <obasiuche62@gmail.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -77,7 +77,8 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
 
 // Bulma core
 @import "bulma/sass/utilities/_all"
-@import "bulma/sass/base/_all"
+@import "bulma/sass/base/_all" 
+@import "bulma/sass/helpers/_all.sass"
 @import "bulma/sass/elements/container"
 @import "bulma/sass/grid/columns"
 // @import "bulma/sass/grid/tiles"
@@ -112,7 +113,8 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
 @import "bulma/sass/components/card"
 @import "bulma/sass/components/dropdown"
 @import "bulma/sass/components/level"
-@import "bulma/sass/components/list"
+// Deprecated
+// @import "bulma/sass/components/list"
 @import "bulma/sass/components/media"
 // @import "bulma/sass/components/menu"
 // @import "bulma/sass/components/message"
