fix whitespace at top when scrolling
Signed-off-by: ainsley <ginger@synadia.com>

--- a/layouts/partials/blog/content.html
+++ b/layouts/partials/blog/content.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section has-background-white">
   <div class="container">
     <div class="content">
     <a class="button is-small is-dark is-outlined" href="/blog">
