--- a/layouts/partials/blog/posts.html
+++ b/layouts/partials/blog/posts.html
@@ -2,7 +2,7 @@
 {{ $recent := first 10 $posts }}
 
 
-<section class="section">
+<section class="section has-background-white">
   <div class="container">
     <div class="columns is-variable is-12">
       <p class="is-size-5 is-size-6-mobile">Welcome to the NATS Blog! We have content from NATS Maintainers, end-users, and community contributors. We always appreciate outside contributions so if you would like to contribute a blog post, see our <a href="/contributing/#contributing-a-blog-post">Contributor's Guide</a> for more information.
