--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -1,5 +1,5 @@
-<section class="section">
-  <div class="container">
+<section class="section has-background-white">
+  <div class="container is-light">
     <div class="content is-medium has-bottom-padding">
       {{ .Content }}
     </div>
