--- a/layouts/partials/home/users.html
+++ b/layouts/partials/home/users.html
@@ -1,7 +1,7 @@
 {{ $desc      := site.Params.description_long | markdownify }}
 {{ $companies := site.Data.companies.companies }}
 
-<section class="section">
+<section class="section has-background-white">
   <div class="columns is-centered">
     <div class="column has-text-centered is-one-fifth">
       
