fix RethinkConn link on events
Signed-off-by: ainsley <ginger@synadia.com>

--- a/layouts/shortcodes/event-list.html
+++ b/layouts/shortcodes/event-list.html
@@ -8,7 +8,9 @@
 <strong>Who</strong>: {{ .who }}<br />
 <strong>What</strong>: {{ .what }}<br />
 <strong>Where</strong>: {{ .where }}<br />
+{{ with .link }}
 <strong>Link</strong>: {{ .link }}<br />
+{{ end }}
 
 <a href="{{ .ref }}" target="_blank">
   More Information
