Separate lines for the LF trademarks text

--- a/layouts/partials/home/cncf.html
+++ b/layouts/partials/home/cncf.html
@@ -7,7 +7,7 @@
     </p>
     
     <p class="has-text-weight-light">
-      The Linux Foundation has registered trademarks and uses trademarks.
+      The Linux Foundation has registered trademarks and uses trademarks.<br>
       For a list of trademarks of The Linux Foundation, please see <a href="https://www.linuxfoundation.org/legal/trademark-usage" target="_blank">Trademark Usage page</a>.
     </p>
   </div>
