--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,11 +1,12 @@
 {{ define "main" }}
-{{ partial "hero.html" . }}
+{{ partial "hero_no_title.html" . }}
 
 
 <section class="section is-medium has-background-white">
     <div class="columns is-centered">
         
         <div class="column has-text-centered is-one-half is-size-5">
+            <div class="is-size-2">404 Page Not Found</div>
             <div class="is-size-2">Whoops!</div>
         It looks like you have followed a broken link or entered a URL that doesn't exist on this site. <br>
     Can't find what you're looking for? Join our <a href="https://slack.nats.io" target="_blank">Slack Community</a>.<br></br>
