update ambassador section
Signed-off-by: ainsley <ginger@synadia.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -253,6 +253,11 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
      height: 75%
      width: 75%
 
+.is-people-logo
+     border-radius: 25px
+     height: 25%
+     width: 25%     
+
 .is-support-logo
      height: 25%
      width: 25%     
