update rethink banner
Signed-off-by: ainsley <ginger@synadia.com>

--- a/layouts/partials/home/banner.html
+++ b/layouts/partials/home/banner.html
@@ -3,7 +3,7 @@
     <div class="flex items-center">
         <p class="flex items-center is-size-5 font-normal text-gray-500 dark:text-gray-400">
             
-            <span>Join us March 20th for RethinkConn 2025! This is a free, virtual event for the NATS community! <a href="https://www.synadia.com/lp/rethink-conn-2025" class="inline font-medium text-blue-600 underline dark:text-blue-500 hover:no-underline">Sign up today -></a></span>
+            <span>Did you miss our NATS Community Event, RethinkConn 2025? Checkout what you missed! <a href="https://www.synadia.com/lp/rethink-conn-2025" class="inline font-medium text-blue-600 underline dark:text-blue-500 hover:no-underline">Replay Available -></a></span>
         </p>
     </div>
     <div class="flex items-center">
