--- a/layouts/partials/home/banner.html
+++ b/layouts/partials/home/banner.html
@@ -3,7 +3,7 @@
     <div class="flex items-center">
         <p class="flex items-center is-size-5 font-normal text-gray-500 dark:text-gray-400">
             
-            <span>Looking Ahead with Clarity and Purpose for NATS.io. Read Synadia's response to the CNCF blog post <a href="https://www.synadia.com/blog/synadia-response-to-cncf" class="inline font-medium text-blue-600 underline dark:text-blue-500 hover:no-underline">here.</a></span>
+            <span><b>Looking Ahead with Clarity and Purpose for NATS.io</b>. Read Synadia's response to the CNCF blog post <a href="https://www.synadia.com/blog/synadia-response-to-cncf" class="inline font-medium text-blue-600 underline dark:text-blue-500 hover:no-underline">here.</a></span>
         </p>
     </div>
     <div class="flex items-center">
