add goosey logo
Signed-off-by: ainsley <ginger@synadia.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -249,6 +249,12 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
      height: 50%
      width: 50%
 
+.is-user-logo[src$=".svg"]
+  /* Your styles here */
+  width: 75px;
+  height: auto;
+
+
 .is-partner-logo
      height: 75%
      width: 75%
