--- a/layouts/partials/home/banner.html
+++ b/layouts/partials/home/banner.html
@@ -3,7 +3,7 @@
     <div class="flex items-center">
         <p class="flex items-center is-size-5 font-normal text-gray-500 dark:text-gray-400">
             
-            <span>Did you miss our NATS Community Event, RethinkConn 2025? Checkout what you missed! <a href="https://www.synadia.com/lp/rethink-conn-2025" class="inline font-medium text-blue-600 underline dark:text-blue-500 hover:no-underline">Replay Available -></a></span>
+            <span>CNCF and Synadia Align on Securing the Future of the NATS.io Project | <a href="https://www.synadia.com/press/cncf-and-synadia-align-on-securing-the-future-of-nats" class="inline font-medium text-blue-600 underline dark:text-blue-500 hover:no-underline">Read the joint release -></a></span>
     </div>
     <div class="flex items-center">
        
