Remove CNCF announcement banner
Signed-off-by: ainsley <ginger@synadia.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -21,7 +21,7 @@
   
   <body class="is-page has-navbar-fixed-top">
     
-      {{ partial "home/banner.html" . }}
+      <!--{{ partial "home/banner.html" . }}-->
           
     <main class="is-main">
       
