--- a/layouts/partials/home/users_alt.html
+++ b/layouts/partials/home/users_alt.html
@@ -14,17 +14,11 @@
 
           {{ range $k, $v := $companies }}
           {{ $img := printf "img/logos/companies/%s" $v.logo | relURL }}
-          <div class="column 
-          is-half-mobile 
-          is-one-third-tablet 
-          is-one-quarter-desktop 
-          is-one-fifth-widescreen 
-          logo">
-<a href="{{ $v.home }}" target="_blank">
-  <img class="is-user-logo" src="{{ $img }}" alt="{{ $v.name }} logo">
-</a>
-</div>
-
+      <div class="column has-text-centered is-one-fifth logo">
+            <a href="{{ $v.home }}" target="_blank">
+              <img class="is-user-logo" src="{{ $img }}" alt="{{ $v.name }} logo">
+            </a>
+          </div>
           {{ end }}
     </div>
     <div class="columns is-centered">
