initial commit of natsflow work

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,6 +12,7 @@
     </title>
     {{ partial "css.html" . }}
     {{ partial "favicon.html" . }}
+    {{ partial "natsflow.html" . }}
    
     {{ if $isDownload }}
     <script async defer src="https://buttons.github.io/buttons.js"></script>
