--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -24,11 +24,7 @@
       margin-bottom: 1rem;
     }
     .features-mobile-section .diagram {
-      margin-top: 1.5rem;
-      background: #d4e9f7;
-      border-radius: 6px;
-      padding: 1rem;
-      text-align: center;
+      display: none !important;
     }
     .features-mobile-section .diagram img {
       max-width: 100%;
@@ -87,7 +83,7 @@
                 data-width="500"
                 data-height="320"
                 data-show-controls="false"
-                style="width: 100%; height: 100%;">
+                >
               </div>
             </div>
           </div>
@@ -171,7 +167,7 @@
             data-scenario="publishSubscribe"
             data-width="600"
             data-height="400"
-            data-show-controls="true"
+            data-show-controls="false"
             style="width: 100%; max-width: 600px; margin: 0 auto;">
           </div>
         </div>
