--- a/layouts/partials/home/video.html
+++ b/layouts/partials/home/video.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="columns is-variable is-6 is-vcentered">
       <div class="column">
-        <p class="title is-size-2 is-size-3-mobile has-text-weight-light" style="margin-bottom: 1.5rem;">
+        <p class="title is-size-2 is-size-3-mobile has-text-weight-light">
           An Introduction to NATS
         </p>
         <p class="subtitle is-size-4 is-size-5-mobile has-text-weight-light">
