--- a/layouts/partials/home/video.html
+++ b/layouts/partials/home/video.html
@@ -5,7 +5,7 @@
         <p class="title is-size-2 is-size-3-mobile has-text-weight-light">
           An Introduction to NATS
         </p>
-        <p class="subtitle is-size-4 is-size-5-mobile has-text-weight-light">
+        <p class="title is-size-4 is-size-5-mobile has-text-weight-light">
           Learn fundamentals like the NATS CLI and core patterns like request/reply and pub/sub.
         </p>
       </div>
