--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -97,7 +97,7 @@
               <div class="content" style="flex-grow: 1;">
                 <p class="is-size-6">
                   NATS was built on intentional design choices: location independence, many-to-many communication, and an async-first model.<br><br>
-                  These principles were central from the start, shaping how NATS works across environments—from a single process to global systems. Core communication and data patterns emerge naturally. Pub/sub, request/reply, streaming, key-value, and object storage all operate within the same system, without extra infra or fragile abstractions.<br><br>
+                  These principles shape how NATS works across environments—from a single process to global systems. Core communication and data patterns emerge naturally. Pub/sub, request/reply, streaming, key-value, and object storage all operate within the same system, without extra infra or fragile abstractions.<br><br>
                   The result: a single connective fabric that stays simple as systems scale. Apps remain decoupled, resilient, and easier to operate, while teams avoid the complexity and sprawl that come with stitching together specialized tools.
                 </p>
               </div>
@@ -176,7 +176,7 @@
         <div class="content">
           <p class="is-size-6">
             NATS was built on intentional design choices: location independence, many-to-many communication, and an async-first model.<br><br>
-            These principles were central from the start, shaping how NATS works across environments—from a single process to global systems. Core communication and data patterns emerge naturally. Pub/sub, request/reply, streaming, key-value, and object storage all operate within the same system, without extra infra or fragile abstractions.<br><br>
+            These principles shape how NATS works across environments—from a single process to global systems. Core communication and data patterns emerge naturally. Pub/sub, request/reply, streaming, key-value, and object storage all operate within the same system, without extra infra or fragile abstractions.<br><br>
             The result: a single connective fabric that stays simple as systems scale. Apps remain decoupled, resilient, and easier to operate, while teams avoid the complexity and sprawl that come with stitching together specialized tools.
           </p>
         </div>
