update twitter icon to X icon and url
Signed-off-by: ainsley <ginger@synadia.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -24,7 +24,7 @@ $nats-light-green: #8dc63f
 
 $reddit-orange: rgba(255, 86, 0, 1)
 $slack-purple: rgb(88, 27, 93)
-$twitter-blue: rgb(29, 161, 242)
+$x-twitter-black: #000000
 $youtube-red: rgb(255, 0, 0)
 $stack-orange: #FF9900
 
@@ -75,7 +75,7 @@ $family-monospace: "{{ . }}", monospace
 // Final Bulma imports
 @import "bulma/sass/utilities/derived-variables"
 
-$colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green": ($nats-light-green, $white), "reddit-orange": ($reddit-orange, $white), "youtube-red": ($youtube-red, $white), "twitter-blue": ($twitter-blue, $white), "stack-orange": ($stack-orange, $white), "slack-purple": ($slack-purple, $white)), $colors)
+$colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green": ($nats-light-green, $white), "reddit-orange": ($reddit-orange, $white), "youtube-red": ($youtube-red, $white), "x-twitter-black": ($x-twitter-black, $white), "stack-orange": ($stack-orange, $white), "slack-purple": ($slack-purple, $white)), $colors)
 
 // Bulma core
 @import "bulma/sass/utilities/_all"
